// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountOverview should render a normal account 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Accounts
      </h1>
      <p
        class="info"
      >
        You have 3 accounts
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="MacFarlane tartan"
        >
          Identicon
        </div>
        <div
          class="name"
        >
          <span>
            My Sporran Account
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Account options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Account options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Create new account"
        class="left"
        href="/account/NEW"
        title="Create new account"
      />
      <a
        aria-label="My Second Account"
        class="right"
        href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="My Second Account"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="My Sporran Account"
            class="bubble bubbleActive"
            href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="My Sporran Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Second Account"
            class="bubble"
            href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="My Second Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Third Account"
            class="bubble"
            href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="My Third Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Create new account"
            class="add"
            href="/account/NEW"
            title="Create new account"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="css-j3frhc"
      />
    </p>
    <p>
      <a
        class="button"
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 accounts with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
  ,
</div>
`;

exports[`AccountOverview should render the new account 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Accounts
      </h1>
      <p
        class="info"
      >
        You have 3 accounts
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <div
          class="MacLeod tartan"
        >
          <a
            aria-label="Create new account"
            class="new"
            href="/account/create"
            title="Create new account"
          />
        </div>
        <p
          class="new"
        >
          Create new account
        </p>
      </section>
      <a
        aria-label="My Third Account"
        class="left"
        href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
        title="My Third Account"
      />
      <a
        aria-label="My Sporran Account"
        class="right"
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
        title="My Sporran Account"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="My Sporran Account"
            class="bubble"
            href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
            title="My Sporran Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Second Account"
            class="bubble"
            href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
            title="My Second Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="My Third Account"
            class="bubble"
            href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
            title="My Third Account"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Create new account"
            class="add addActive"
            href="/account/NEW"
            title="Create new account"
          />
        </li>
      </ul>
    </div>
    <a
      class="import"
      href="/account/import"
    >
      Import an account from pre-existing phrase
    </a>
    <p
      class="stats"
    >
      You have 3 accounts with a total
      <span
        class="balance"
      >
         Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="Kilt coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
  ,
</div>
`;
